# GVirtuS

./: .gitignore  CMakeLists.txt  Dockerfile-build  README.md
cmake/: GVirtuS.cmake
docker/: Dockerfile-backend  Dockerfile-frontend  Dockerfile-frontend-cusolver  Dockerfile-frontend-cusparse  docker-compose.yml
etc/: properties-docker.json  properties.json
plugins/cusolver/: CMakeLists.txt
plugins/cusolver/backend/: CusolverHandler.cpp  CusolverHandler.h  CusolverHandler_dense_helper.cpp  CusolverHandler_dense_lapack_eigenvalue_solver.cpp  (+10 more)
plugins/cusolverMg/: CMakeLists.txt
plugins/cusolverMg/backend/: CusolverMgHandler.cpp  CusolverMgHandler.h  CusolverMgHandler_multi_gpu_dense_linear_eigenvalue.cpp  CusolverMgHandler_multi_gpu_dense_linear_solver.cpp  CusolverMgHandler_multi_gpu_helper.cpp
plugins/cusolverMg/demo/: CMakeLists.txt  cusolver_utils.h
plugins/cusolverMg/demo/multigpu/eigenvalue_solver/: syevd.cu
plugins/cusolverMg/demo/multigpu/linear_solver/: getrf_getrs.cu  potrf_potri.cu  potrf_potrs.cu
plugins/cusolverMg/frontend/: CusolverMg.cpp  CusolverMgFrontend.cpp  CusolverMgFrontend.h  CusolverMg_multi_gpu_dense_linear_eigenvalue.cpp  CusolverMg_multi_gpu_dense_linear_solver.cpp  CusolverMg_multi_gpu_helper.cpp
plugins/cusparse/: CMakeLists.txt
plugins/cusparse/backend/: CusparseHandler.cpp  CusparseHandler.h  CusparseHandler_extra.cpp  CusparseHandler_format_conversion_reference.cpp  CusparseHandler_generic.cpp  CusparseHandler_helper.cpp  CusparseHandler_level1.cpp  CusparseHandler_level2.cpp  CusparseHandler_level3.cpp  CusparseHandler_management.cpp  CusparseHandler_preconditioners_reference.cpp  CusparseHandler_reorderings.cpp  Utilities.h
plugins/cusparse/demo/: CMakeLists.txt  cusparse_get_error_string.cu  cusparse_get_property.cu  cusparse_get_version.cu  cusparse_set_and_get_stream.cu
plugins/cusparse/demo/extra/: csrgeam2.cu  csrgeam2Complex.cu  csrgeam2ComplexDouble.cu  csrgeam2Double.cu  csrgemm2.cu  csrgemm2Complex.cu  csrgemm2ComplexDouble.cu  csrgemm2Double.cu  utilities.h
plugins/cusparse/demo/format_conversion/: bsr2csr.cu  bsr2csrComplex.cu  bsr2csrComplexDouble.cu  bsr2csrDouble.cu  coo2csr.cu  coosort.cu  createIdentityPermutation.cu  csc2dense.cu  csc2denseComplex.cu  csc2denseComplexDouble.cu  csc2denseDouble.cu  cscsort.cu  csr2coo.cu  csr2cscex2.cu  csr2cscex2Complex.cu  csr2cscex2ComplexDouble.cu  csr2cscex2Double.cu  csr2csr_compress.cu  csr2csr_compressComplex.cu  csr2csr_compressComplexDouble.cu  csr2csr_compressDouble.cu  csr2dense.cu  csr2denseComplex.cu  csr2denseComplexDouble.cu  csr2denseDouble.cu  csr2gebsr.cu  csr2gebsrComplex.cu  csr2gebsrComplexDouble.cu  csr2gebsrDouble.cu  csrsort.cu  csru2csr_csr2csru.cu  csru2csr_csr2csruComplex.cu  csru2csr_csr2csruComplexDouble.cu  csru2csr_csr2csruDouble.cu  dense2csc.cu  dense2cscComplex.cu  dense2cscComplexDouble.cu  dense2cscDouble.cu  gebsr2csr.cu  gebsr2csrComplex.cu  (+23 more)
plugins/cusparse/demo/generic/: axpby.cu  blockedEll.cu  coo.cu  csc.cu  csr.cu  cusparse.cu  cusparse_opt.cu  cusparse_perf_test.cu  cusparse_vector.cu  dense2sparse_blockedell.cu  dnMat.cu  dnVec.cu  gather.cu  perf_test.cu  perf_test_cpu_only.cpp  perf_test_cusparse.cu  perf_test_pure_cuda.cu  rot.cu  scatter.cu  sddmm.cu  sparse2dense_csr.cu  spgemm.cu  spgemm_reuse.cu  spmm.cu  spsm.cu  spsv.cu  spvec.cu  spvv.cu  utilities2.h
plugins/cusparse/demo/helper/: cusparse_create_and_destroy_color_info.cu  cusparse_create_and_destroy_mat_descr.cu  cusparse_create_and_destroy_mat_structures.cu  cusparse_create_color_info.cu  cusparse_get_and_set_mat_info.cu
plugins/cusparse/demo/level1/: axpyi.cu  axpyiComplex.cu  axpyiComplexDouble.cu  axpyiDouble.cu  gthr.cu  gthrComplex.cu  gthrComplexDouble.cu  gthrDouble.cu  gthrz.cu  gthrzComplex.cu  gthrzComplexDouble.cu  gthrzDouble.cu  roti.cu  rotiDouble.cu  sctr.cu  sctrComplex.cu  sctrComplexDouble.cu  sctrDouble.cu  utilities.h
plugins/cusparse/demo/level2/: bsrmm.cu  bsrmmComplex.cu  bsrmmComplexDouble.cu  bsrmmDouble.cu  bsrmv.cu  bsrmvComplex.cu  bsrmvComplexDouble.cu  bsrmvDouble.cu  bsrsv2.cu  bsrsv2Complex.cu  bsrsv2ComplexDouble.cu  bsrsv2Double.cu  bsrxmv.cu  bsrxmvComplex.cu  bsrxmvComplexDouble.cu  bsrxmvDouble.cu  csrmvex.cu  csrsv2.cu  csrsv2Complex.cu  csrsv2ComplexDouble.cu  csrsv2Double.cu  gemvi.cu  gemviComplex.cu  gemviComplexDouble.cu  gemviDouble.cu  spmv.cu  utilities.h
plugins/cusparse/demo/level3/: CMakeLists.txt  bsrmm.cu  bsrmmComplex.cu  bsrmmComplexDouble.cu  bsrmmDouble.cu  bsrsm2.cu  bsrsm2Complex.cu  bsrsm2ComplexDouble.cu  bsrsm2Double.cu  csrsm2.cu  csrsm2Complex.cu  csrsm2ComplexDouble.cu  csrsm2Double.cu  gemmi.cu  gemmiComplex.cu  gemmiComplexDouble.cu  gemmiDouble.cu  utilities.h
plugins/cusparse/demo/management/: cusparse_create_and_destroy.cu  cusparse_get_and_set_pointer_mode.cu
plugins/cusparse/demo/preconditioners/: bsric02.cu  bsric02Complex.cu  bsric02ComplexDouble.cu  bsric02Double.cu  bsrilu02.cu  bsrilu02Complex.cu  bsrilu02ComplexDouble.cu  bsrilu02Double.cu  csric02.cu  csric02Complex.cu  csric02ComplexDouble.cu  csric02Double.cu  csrilu02.cu  csrilu02Complex.cu  csrilu02ComplexDouble.cu  csrilu02Double.cu  gpsvBatch.cu  gpsvBatchComplex.cu  gpsvBatchComplexDouble.cu  gpsvBatchDouble.cu  gtsv2.cu  gtsv2Batched.cu  gtsv2BatchedComplex.cu  gtsv2BatchedComplexDouble.cu  gtsv2BatchedDouble.cu  gtsv2BatchedInterleaved.cu  gtsv2BatchedInterleavedComplex.cu  gtsv2BatchedInterleavedComplexDouble.cu  gtsv2BatchedInterleavedDouble.cu  gtsv2Complex.cu  gtsv2ComplexDouble.cu  gtsv2Double.cu  gtsv2nopivot.cu  gtsv2nopivotComplex.cu  gtsv2nopivotComplexDouble.cu  gtsv2nopivotDouble.cu
plugins/cusparse/demo/reorderings/: csrcolor.cu  csrcolorComplex.cu  csrcolorComplexDouble.cu  csrcolorDouble.cu
plugins/cusparse/frontend/: Cusparse.cpp  Cusparse.h  Cusparse_extra.cpp  Cusparse_format_conversion_reference.cpp  Cusparse_generic.cpp  Cusparse_helper.cpp  Cusparse_level1.cpp  Cusparse_level2.cpp  Cusparse_level3.cpp  Cusparse_management.cpp  Cusparse_preconditioners_reference.cpp  Cusparse_reorderings.cpp
(+176 files in other folders)
