install(DIRECTORY extra DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY format_conversion DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY generic DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY helper DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY level1 DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY level2 DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY level3 DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY management DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY preconditioners DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
install(DIRECTORY reorderings DESTINATION ${GVIRTUS_HOME}/demo/cusparse)
